@@ -1,0 +1,3 @@
+
+PASS Ensuring certificates and cnames are ephemerals 
+
