@@ -1,3 +1,13 @@
+2017-03-31  Youenn Fablet  <youenn@apple.com>
+
+        Add a test to ensure webrtc generated certificates and names are ephemeral
+        https://bugs.webkit.org/show_bug.cgi?id=170225
+
+        Reviewed by Jon Lee.
+
+        * webrtc/ephemeral-certificates-and-cnames-expected.txt: Added.
+        * webrtc/ephemeral-certificates-and-cnames.html: Added.
+
 2017-03-31  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         [WK2] Tapping editable text inside of a range selection no longer changes the selection to a caret
